--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,83 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+    color-scheme: light dark;
+
+    --font-family: -apple-system, system-ui, sans-serif;
+    --font-family-monospace: Consolas, Menlo, Monaco, Andale Mono WT,
+        Andale Mono, Lucida Console, Lucida Sans Typewriter, DejaVu Sans Mono,
+        Bitstream Vera Sans Mono, Liberation Mono, Nimbus Mono L, Courier New,
+        Courier, monospace;
+
+    /* Minor Third */
+    --step--3: 0.579rem;
+    --step--2: 0.694rem;
+    --step--1: 0.833rem;
+    --step-0: 1rem;
+    --step-1: 1.2rem;
+    --step-2: 1.44rem;
+    --step-3: 1.728rem;
+    --step-4: 2.074rem;
+    --step-5: 2.488rem;
+
+    --body-width: 45rem;
+}
+html,
+body {
+    font-family: var(--font-family);
+}
+/* flow  */
+.flow > * + * {
+    margin-block-start: var(--flow-space, 1em);
+}
+
+:is(h1, h2, h3, blockquote) {
+    --flow-space: 1.5em;
+}
+
+:is(h1, h2, h3) + *:not(blockquote) {
+    --flow-space: 0.5em;
+}
+
+section {
+    margin-block-start: 4rem;
+}
+h1,
+h2,
+h3 {
+    line-height: 1.1;
+    text-wrap: balance;
+}
+h1 {
+    font-size: var(--step-4);
+    font-weight: 600;
+}
+h2 {
+    font-size: var(--step-3);
+    font-weight: 600;
+}
+h3 {
+    font-size: var(--step-2);
+}
+h4 {
+    font-size: var(--step-1);
+}
+h5 {
+    font-size: var(--step-0);
+}
+h6 {
+    font-size: var(--step-0);
+}
+
+/* https://www.a11yproject.com/posts/how-to-hide-content/ */
+.visually-hidden {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+}
