--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,5 +1,7 @@
 ---
 import 'src/styles/global.css';
+import Header from '@components/Header.astro';
+import Footer from '@components/Footer.astro';
 import { metadata } from '../metadata';
 const { title } = Astro.props;
 ---
@@ -14,6 +16,17 @@ const { title } = Astro.props;
         <title>{title}</title>
     </head>
     <body>
-        <slot />
+        <Header />
+        <main>
+            <slot />
+        </main>
+        <Footer />
     </body>
 </html>
+
+<style>
+    main {
+        max-width: var(--body-width);
+        margin: auto;
+    }
+</style>
