--- a/src/layouts/Markdown.astro
+++ b/src/layouts/Markdown.astro
@@ -3,7 +3,7 @@ import Base from '@layouts/Base.astro';
 ---
 
 <Base>
-    <main class="mx-auto">
+    <div class="flow">
         <slot />
-    </main>
+    </div>
 </Base>
