--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -26,7 +26,10 @@ const { title } = Astro.props;
 
 <style>
     main {
+        width: 100%;
         max-width: var(--body-width);
         margin: auto;
+        flex-grow: 1;
+        padding-inline: 1rem;
     }
 </style>
