--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,10 +23,36 @@
     --step-5: 2.488rem;
 
     --body-width: 45rem;
+
+    --text-color: hsl(var(--text-color-values));
+    --background-color: hsl(var(--background-color-values));
+
+    --text-color-values: 0, 0%, 20%;
+    --background-color-values: 0, 0%, 96.08%;
+
+    @media (prefers-color-scheme: dark) {
+        --text-color-values: 0, 2.63%, 85.1%;
+        --background-color-values: 210, 34.38%, 12.55%;
+    }
 }
 html,
 body {
+    font-size: 15px;
+    padding: 0;
+    margin: 0 auto;
     font-family: var(--font-family);
+    color: var(--text-color);
+    background-color: var(--background-color);
+    line-height: 1.6;
+}
+html {
+    overflow-y: scroll;
+}
+body {
+    max-width: var(--body-width);
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 /* flow  */
 .flow > * + * {
@@ -80,4 +106,8 @@ h6 {
     position: absolute;
     white-space: nowrap;
     width: 1px;
+}
+
+a {
+    text-decoration: underline;
 }
