--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,7 +10,7 @@ const nav = [
 ];
 ---
 
-<header class="no-underline">
+<header>
     <a href="/" class="home-link text-2xl font-bold mr-8 no-underline"
         >{metadata.title}</a
     >
