--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,9 @@ import FeaturedProjects from '@components/home/FeaturedProjects.astro';
 ---
 
 <Base title={metadata.title}>
-    <Greetings />
-    <RecentPosts />
-    <FeaturedProjects />
+    <main>
+        <Greetings />
+        <RecentPosts />
+        <FeaturedProjects />
+    </main>
 </Base>
