--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,3 +5,11 @@ const year = new Date().getFullYear();
 <footer>
     <span>&copy; Parker Davis {year}</span>
 </footer>
+
+<style>
+    footer {
+        padding-top: 2rem;
+        padding-inline: 1rem;
+        font-size: var(--step--1);
+    }
+</style>
