--- a/src/components/home/FeaturedProjects.astro
+++ b/src/components/home/FeaturedProjects.astro
@@ -1,24 +1,23 @@
 ---
-
+import { getCollection } from 'astro:content';
+import ProjectListing from '@components/ProjectListing.astro';
+const projects = await getCollection('projects');
+const featuredProjects = projects.filter(({ data }) => data.featured);
+const moreProjects = projects.length - featuredProjects.length;
 ---
 
 <section class="flow">
-    <h2 id="projects">Featured Projects</h2>
-    <!-- {% css %} -->
-    <!-- {% include "public/css/projects-list.css" %} -->
-    <!-- {% endcss %} -->
-    <ul class="projects-ul">
-        <!-- {% for project in collections.projects | featured %} -->
-        <!-- <li class="projects-li">
-                <a class="projects-a" href="{{ project.url }}">
-                    {{ project.data.title }}
-                </a>
-                <p class="project-description">{{ project.data.description }}</p>
-            </li> -->
-        <!-- {% endfor %} -->
+    <h2>Featured Projects</h2>
+    <ul class="flex flex-col gap-4">
+        {
+            featuredProjects.map((project) => (
+                <ProjectListing project={project} />
+            ))
+        }
     </ul>
-    <!-- {% set moreProjects = collections.projects | length - collections.projects | featured | length %} -->
     <p>
-        <!-- <a href="/projects">View {{ moreProjects }} more project{{ 's' if moreProjects > 1 }}</a> -->
+        <a href="/projects"
+            >View {moreProjects} more project{moreProjects > 1 ? 's' : null}</a
+        >
     </p>
 </section>
