--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -4,6 +4,7 @@ import Header from '@components/Header.astro';
 import Footer from '@components/Footer.astro';
 import { metadata } from '../metadata';
 const { title } = Astro.props;
+import ViewTransitions from 'astro/components/ViewTransitions.astro';
 ---
 
 <!doctype html>
@@ -12,24 +13,13 @@ const { title } = Astro.props;
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="generator" content={Astro.generator} />
-        <link rel="canonical" href={Astro.site.origin + Astro.url.pathname} />
+        <link rel="canonical" href={Astro.site?.origin + Astro.url.pathname} />
         <title>{title}</title>
+        <ViewTransitions />
     </head>
     <body>
         <Header />
-        <main>
-            <slot />
-        </main>
+        <slot />
         <Footer />
     </body>
 </html>
-
-<style>
-    main {
-        width: 100%;
-        max-width: var(--body-width);
-        margin: auto;
-        flex-grow: 1;
-        padding-inline: 1rem;
-    }
-</style>
