--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,7 +2,9 @@
 import MainFlow from '@layouts/MainFlow.astro';
 import PostListing from '@components/PostListing.astro';
 import { getCollection } from 'astro:content';
-const allPosts = await getCollection('blog');
+const allPosts = (await getCollection('blog')).sort(
+    (a, b) => b.data.date.getTime() - a.data.date.getTime()
+);
 ---
 
 <MainFlow>
