--- a/src/components/ProjectListing.astro
+++ b/src/components/ProjectListing.astro
@@ -10,7 +10,7 @@ const { project, showTag } = Astro.props;
         showTag && (
             <div class="tags-list">
                 {project.data.tags &&
-                    project.data.tags.map((tag) => <p>{tag}</p>)}
+                    project.data.tags.map((tag: string) => <p>{tag}</p>)}
             </div>
         )
     }
