--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -21,5 +21,30 @@ import ViewTransitions from 'astro/components/ViewTransitions.astro';
         <Header />
         <slot />
         <Footer />
+        <script is:inline>
+            document.addEventListener('astro:page-load', () => {
+                const allPictures =
+                    document.querySelectorAll('img:not(.no-fade)');
+
+                allPictures.forEach((image) => {
+                    image.style.opacity = 0;
+                });
+
+                allPictures.forEach((image) =>
+                    image.addEventListener('load', (event) => {
+                        event.target.style.transition = 'opacity 1s';
+                        event.target.style.opacity = '1';
+                    })
+                );
+
+                // Backup if image is loaded from the cache;
+                allPictures.forEach((image) => {
+                    if (image.complete) {
+                        image.style.transition = 'opacity 1s';
+                        image.style.opacity = '1';
+                    }
+                });
+            });
+        </script>
     </body>
 </html>
