--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -21,7 +21,7 @@ const { headings } = await post.render();
                 </div>
                 <slot />
             </article>
-            <div class="border-t border-b border-dashed py-5">
+            <div class="border-t border-b border-dashed border-textColor py-5">
                 {
                     prevPost && (
                         <p>
