--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -118,19 +118,12 @@ a {
     text-decoration: underline;
 }
 
-article a {
-    color: var(--text-color-link);
+img {
+    font-style: italic;
 }
 
-/* https://www.a11yproject.com/posts/how-to-hide-content/ */
-.visually-hidden {
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    height: 1px;
-    overflow: hidden;
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
+article a {
+    color: var(--text-color-link);
 }
 
 article img {
@@ -143,6 +136,20 @@ article kbd {
     padding: 2px 4px;
     color: black;
     font-size: var(--step--1);
+}
+
+article ul,
+article ol {
+    padding-left: 1em;
+}
+article ol li {
+    list-style: decimal;
+}
+article li {
+    list-style: disc;
+}
+article li li {
+    list-style-type: '- ';
 }
 
 .small-image {
@@ -158,4 +165,15 @@ code {
     code {
         background: #ffffff22;
     }
+}
+
+/* https://www.a11yproject.com/posts/how-to-hide-content/ */
+.visually-hidden {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
 }
