--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -15,7 +15,7 @@ import ViewTransitions from 'astro/components/ViewTransitions.astro';
         <meta name="generator" content={Astro.generator} />
         <link rel="canonical" href={Astro.site?.origin + Astro.url.pathname} />
         <title>{title}</title>
-        <ViewTransitions />
+        <!-- <ViewTransitions /> -->
     </head>
     <body>
         <Header />
