--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -2,7 +2,7 @@
 import MainFlow from '@layouts/MainFlow.astro';
 import { metadata } from 'src/metadata.ts';
 import { Image } from 'astro:assets';
-import SaltRiver from './salt-river.jpeg';
+import SaltRiver from './salt-river.jpg';
 ---
 
 <MainFlow>
