--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -2,9 +2,7 @@
 import 'src/styles/global.css';
 import Header from '@components/Header.astro';
 import Footer from '@components/Footer.astro';
-import { metadata } from '../metadata';
 const { title } = Astro.props;
-import ViewTransitions from 'astro/components/ViewTransitions.astro';
 ---
 
 <!doctype html>
@@ -15,35 +13,35 @@ import ViewTransitions from 'astro/components/ViewTransitions.astro';
         <meta name="generator" content={Astro.generator} />
         <link rel="canonical" href={Astro.site?.origin + Astro.url.pathname} />
         <title>{title}</title>
-        <!-- <ViewTransitions /> -->
     </head>
     <body>
         <Header />
         <slot />
         <Footer />
-        <script is:inline>
-            document.addEventListener('astro:page-load', () => {
-                const allPictures =
-                    document.querySelectorAll('img:not(.no-fade)');
-
-                allPictures.forEach((image) => {
-                    image.style.opacity = 0;
-                });
-
-                allPictures.forEach((image) =>
-                    image.addEventListener('load', (event) => {
-                        event.target.style.transition = 'opacity 1s';
-                        event.target.style.opacity = '1';
-                    })
+        <script>
+            const allPictures =
+                document.querySelectorAll<HTMLImageElement>(
+                    'img:not(.no-fade)'
                 );
 
-                // Backup if image is loaded from the cache;
-                allPictures.forEach((image) => {
-                    if (image.complete) {
-                        image.style.transition = 'opacity 1s';
-                        image.style.opacity = '1';
-                    }
-                });
+            allPictures.forEach((image) => {
+                image.style.opacity = '0';
+            });
+
+            allPictures.forEach((image) =>
+                image.addEventListener('load', (event) => {
+                    const image = event.target as HTMLImageElement;
+                    image.style.transition = 'opacity 1s';
+                    image.style.opacity = '1';
+                })
+            );
+
+            // Backup if image is loaded from the cache;
+            allPictures.forEach((image) => {
+                if (image.complete) {
+                    image.style.transition = 'opacity 1s';
+                    image.style.opacity = '1';
+                }
             });
         </script>
     </body>
