Bring in birds make sound

--- a/src/components/PostListing.astro
+++ b/src/components/PostListing.astro
@@ -6,25 +6,71 @@ const readableDate = dayjs(post.data.date).format('DD MMM YYYY');
 
 <li>
     <time datetime={post.data.date}>{readableDate}</time>
-    <a href=`/blog/${post.slug}`>{post.data.title}</a>
+    {
+        post.bms ? (
+            <a class="title" href={post.data.slug}>
+                {post.data.title}
+            </a>
+        ) : (
+            <a class="title" href={`/blog/${post.slug}`}>
+                {post.data.title}
+            </a>
+        )
+    }
+    <span
+        >{
+            post.bms ? (
+                <>
+                    <span>[</span>
+                    <span class="bms">Birds Make Sound</span>
+                    <span>]</span>
+                </>
+            ) : null
+        }</span
+    >
 </li>
 
 <style>
     li {
-        display: flex;
-        flex-direction: row;
+        display: grid;
+        grid-template-rows: auto;
+        /* grid-template-columns: [time-start] 8em [time-end] [title-start] auto [title-end] [bms-start] auto [bms-end]; */
+        grid-template-columns: 8em auto auto;
+        justify-content: start;
+        column-gap: 1rem;
         align-items: baseline;
         margin-bottom: 1em;
     }
 
     time {
+        grid-area: 0 / 1;
         font-size: var(--step--1);
         min-width: 8em;
     }
 
+    .title {
+        grid-area: 1 / 2;
+    }
+
+    .bms {
+        font-size: var(--step--1);
+        color: #646ead;
+        grid-area: 2 / 3;
+    }
+
     @media (max-width: 640px) {
         li {
-            flex-direction: column-reverse;
+            grid-template-columns: auto minmax(0, 1fr);
+            grid-template-rows: auto auto;
+        }
+        .title {
+            grid-row: 0 / 1;
+            grid-column: span 2;
+        }
+    }
+    @media (prefers-color-scheme: dark) {
+        .bms {
+            color: hsla(267, 100%, 86%, 1);
         }
     }
 </style>
