--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,7 +2,21 @@
 import MainFlow from '@layouts/MainFlow.astro';
 import PostListing from '@components/PostListing.astro';
 import { getCollection } from 'astro:content';
-const allPosts = (await getCollection('blog')).sort(
+const allPosts = await getCollection('blog');
+
+// Birds make sound
+const response = await fetch('https://birdsmakesound.com/feed/feed.json');
+const { items } = await response.json();
+// console.log(items);
+const formattedBMS = items.map((item) => ({
+    bms: true,
+    data: {
+        date: new Date(item.date_published),
+        title: item.title,
+        slug: item.url,
+    },
+}));
+const combinedPosts = [...allPosts, ...formattedBMS].sort(
     (a, b) => b.data.date.getTime() - a.data.date.getTime()
 );
 ---
@@ -10,6 +24,6 @@ const allPosts = (await getCollection('blog')).sort(
 <MainFlow>
     <h1>Posts</h1>
     <ul>
-        {allPosts.map((post) => <PostListing post={post} />)}
+        {combinedPosts.map((post) => <PostListing post={post} />)}
     </ul>
 </MainFlow>
