--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -12,6 +12,7 @@ const { title } = Astro.props;
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="generator" content={Astro.generator} />
         <link rel="canonical" href={Astro.site?.origin + Astro.url.pathname} />
+        <link rel="sitemap" href="/sitemap-index.xml" />
         <title>{title}</title>
     </head>
     <body>
