--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -5,7 +5,7 @@ import { Image } from 'astro:assets';
 import SaltRiver from './saltriver.jpg';
 ---
 
-<MainFlow>
+<MainFlow title="About">
     <h1>About Me</h1>
     <div class="portrait">
         <Image src={SaltRiver} alt="Parker recording swans on the Salt River" />
