--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -28,7 +28,7 @@ const tagsWithCount = countAndSortTags(allTags);
 const uniqueTags = Array.from(new Set([...allTags]));
 ---
 
-<MainFlow>
+<MainFlow title="All Tags">
     <h1>All Tags</h1>
     <ul class="sm:block sm:columns-3 columns-2">
         {
