--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -2,7 +2,12 @@
 import 'src/styles/global.css';
 import Header from '@components/Header.astro';
 import Footer from '@components/Footer.astro';
-const { title } = Astro.props;
+import { metadata } from 'src/metadata';
+const { title: propsTitle, description } = Astro.props;
+
+const url = Astro.site?.origin + Astro.url.pathname;
+const socialImage = Astro.site?.origin + metadata.socialImage;
+const title = propsTitle ? propsTitle + ' • Parker Davis' : 'Parker Davis';
 ---
 
 <!doctype html>
@@ -13,7 +18,36 @@ const { title } = Astro.props;
         <meta name="generator" content={Astro.generator} />
         <link rel="canonical" href={Astro.site?.origin + Astro.url.pathname} />
         <link rel="sitemap" href="/sitemap-index.xml" />
+        <link rel="alternate" href="/rss.xml" type="application/atom+xml" />
+        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+        <meta
+            name="description"
+            content={description || metadata.description}
+        />
         <title>{title}</title>
+        <!-- TODO -->
+
+        <!-- Open Graph -->
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content={url} />
+        <meta property="og:locale" content="en_US" />
+        <meta property="og:title" content={title || metadata.title} />
+        <meta
+            property="og:description"
+            content={description || metadata.description}
+        />
+        <meta property="og:image" content={socialImage} />
+        <!-- Twitter -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:site" content={metadata.twitter} />
+        <meta name="twitter:creator" content={metadata.twitter} />
+        <meta name="twitter:url" content={url} />
+        <meta name="twitter:title" content={title || metadata.title} />
+        <meta
+            name="twitter:description"
+            content={description || metadata.description}
+        />
+        <meta name="twitter:image" content={socialImage} />
     </head>
     <body>
         <Header />
