--- a/src/layouts/MainFlow.astro
+++ b/src/layouts/MainFlow.astro
@@ -1,8 +1,9 @@
 ---
 import Base from '@layouts/Base.astro';
+const { title } = Astro.props;
 ---
 
-<Base>
+<Base title={title}>
     <main class="flow">
         <slot />
     </main>
