--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -2,7 +2,7 @@
 import 'src/styles/global.css';
 import Header from '@components/Header.astro';
 import Footer from '@components/Footer.astro';
-import { metadata } from 'src/metadata';
+import { metadata } from 'src/metadata.ts';
 const { title: propsTitle, description } = Astro.props;
 
 const url = Astro.site?.origin + Astro.url.pathname;
