--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -25,7 +25,7 @@ function countAndSortTags(allTags: string[]): [string, number][] {
     return sortedCounts;
 }
 const tagsWithCount = countAndSortTags(allTags);
-const uniqueTags = Array.from(new Set([...allTags]));
+// const uniqueTags = Array.from(new Set([...allTags]));
 ---
 
 <MainFlow title="All Tags">
