--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import { metadata } from 'src/metadata';
+import { metadata } from 'src/metadata.ts';
 import Icon from './Icon.astro';
 
 const nav = [
