--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import RecentPosts from '@components/home/RecentPosts.astro';
 import FeaturedProjects from '@components/home/FeaturedProjects.astro';
 ---
 
-<Base title={metadata.title}>
+<Base>
     <main>
         <Greetings />
         <RecentPosts />
